--- a/estilo/style.css
+++ b/estilo/style.css
@@ -27,15 +27,26 @@
 body{
     background-color: var(--cor1);
     font-family: var(--fonte-padrao);
+    height: 100vh;
 }
 
 header{
-    background-image: linear-gradient(to bottom, var(--cor0), rgba(33, 31, 31, 0.788));
-    padding: 15px;
+    height: 100%;
+    background-image: linear-gradient(to bottom, var(--cor0) 0%, rgba(53, 50, 50, 0.603) 20%);
+    padding: 8px;
     padding-left: 40px;
+    font-weight: normal;
     font-size: 0.8em;
     color: var(--cor2);
 } 
+
+header > h2{
+    padding-bottom: 4px;
+}
+
+header > p{
+    font-size: 1.2em;
+}
 
 menu > h1#topo{
     padding: 3.2px;
@@ -50,16 +61,48 @@ menu > h1#topo{
 menu{
     display: flex;
     background-color: var(--cor0);
-    /* justify-content: space-between; */
     padding: 15px;
     padding-top: 5px;
     padding-left: 40px;
 }
 
 nav{
+    display: flex;
     font-weight: bold;
     font-size: 1em;
+    padding: 8px;
     padding-top: 13px;
+    gap: 8px;
+}
+
+/* nav > span{
+    background-color: rgba(105, 99, 99, 0.527);
+    border-radius: 100px;
+    color: white;
+    font-size: 2em;
+    height: 24px;
+    padding: 5px;
+} */
+
+/* nav#direita > div{
+    display: flex;
+    width: 60px;
+    background-color: rgba(105, 99, 99, 0.527);
+    border-radius: 100px;
+    font-size: 2em;
+    height: 36px;
+    align-items: center;
+    gap: 5px;
+    
+} */
+
+nav#direita > div{
+    background-color: rgba(105, 99, 99, 0.527);
+    border-radius: 100px;
+    color: white;
+    font-size: 2em;
+    height: 24px;
+    padding: 5px;
 }
 
 nav > a{
@@ -67,6 +110,7 @@ nav > a{
     padding: 10px;
     border-radius: 30px; /*BORDINHA DE 30 PIXELS NO MENU*/
     text-decoration: none;
+    transition-duration: 0.5s; /*VAI DEMORAR MEIO SEGUNDO PARA SUMIR A MARCAÇÃO EM CIMA DO MENU AO PASSAR O CURSOR EM CIMA*/
 }
 
 nav > a:hover{
@@ -74,13 +118,12 @@ nav > a:hover{
     color: var(--cor2);
 }
 
-
-menu > nav#esquerda{
-    padding-left: 40px;
+menu > nav#esquerda {
+    margin-left: 40px;
 }
 
-header > menu > nav#direita{
-    
+menu > nav#direita {
+    margin-left: auto; /*EMPURRA ESTE NAV PARA A DIREITA*/
 }
 
 
