--- a/estilo/style.css
+++ b/estilo/style.css
@@ -50,6 +50,7 @@ header > p{
 
 menu > h1#topo{
     padding: 3.2px;
+    padding-top: 10px;
     font-family: var(--fonte-destaque);
     font-weight: normal;
     font-size: 1.7em;
@@ -75,36 +76,6 @@ nav{
     gap: 8px;
 }
 
-/* nav > span{
-    background-color: rgba(105, 99, 99, 0.527);
-    border-radius: 100px;
-    color: white;
-    font-size: 2em;
-    height: 24px;
-    padding: 5px;
-} */
-
-/* nav#direita > div{
-    display: flex;
-    width: 60px;
-    background-color: rgba(105, 99, 99, 0.527);
-    border-radius: 100px;
-    font-size: 2em;
-    height: 36px;
-    align-items: center;
-    gap: 5px;
-    
-} */
-
-nav#direita > div{
-    background-color: rgba(105, 99, 99, 0.527);
-    border-radius: 100px;
-    color: white;
-    font-size: 2em;
-    height: 24px;
-    padding: 5px;
-}
-
 nav > a{
     color: var(--cor2);
     padding: 10px;
@@ -122,8 +93,46 @@ menu > nav#esquerda {
     margin-left: 40px;
 }
 
+nav > div#inicio > a{
+    gap: 5px;
+    color: var(--cor2);
+    padding: 10px;
+    border-radius: 30px; /*BORDINHA DE 30 PIXELS NO MENU*/
+    text-decoration: none;
+    transition-duration: 0.5s; /* VAI DEMORAR MEIO SEGUNDO PARA SUMIR A MARCAÇÃO EM CIMA DO MENU AO PASSAR O CURSOR EM CIMA*/
+}
+
+nav > div#agora > a{
+    gap: 5px;
+    color: var(--cor2);
+    padding: 10px;
+    border-radius: 30px; /*BORDINHA DE 30 PIXELS NO MENU*/
+    text-decoration: none;
+    transition-duration: 0.5s; /* VAI DEMORAR MEIO SEGUNDO PARA SUMIR A MARCAÇÃO EM CIMA DO MENU AO PASSAR O CURSOR EM CIMA*/
+}
+
+nav > div#agora > img{
+   padding-top: 2px;
+}
+
 menu > nav#direita {
     margin-left: auto; /*EMPURRA ESTE NAV PARA A DIREITA*/
 }
+
+nav#direita > div{
+    background-color: rgba(105, 99, 99, 0.527);
+    border-radius: 100px;
+    color: white;
+    font-size: 2em;
+    height: 24px;
+    padding: 5px;
+}
+
+menu > nav#direita > div > img{
+    padding-bottom: 32px;
+    padding-right: 5px;
+}
+
+
 
 
