hover do menu direito check

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -93,7 +93,7 @@ nav > a:hover{
     margin-left: 40px;
 }
 
-#esquerda > #inicio > a{
+#esquerda > .botoes_1 > a{
     color: var(--cor2);
     padding: 10px;
     padding-left: 6px;
@@ -102,41 +102,30 @@ nav > a:hover{
     transition-duration: 0.5s; /* VAI DEMORAR MEIO SEGUNDO PARA SUMIR A MARCAÇÃO EM CIMA DO MENU AO PASSAR O CURSOR EM CIMA*/
 } 
 
-#esquerda > #inicio:hover{
+#esquerda > .botoes_1:hover{
     background-color: rgba(49, 47, 47, 0.678);
     color: var(--cor2);
     border-radius: 30px;
     padding-left: 9px;
+    cursor: pointer;
 }
 
-#esquerda > #agora > a{
+#direita > .botoes_2 > a{
     color: var(--cor2);
     padding: 10px;
-    padding-left: 2px;
+    padding-left: 6px;
     border-radius: 30px; /*BORDINHA DE 30 PIXELS NO MENU*/
     text-decoration: none;
-    transition-duration: 0.5s;
-}
+    transition-duration: 0.5s; /* VAI DEMORAR MEIO SEGUNDO PARA SUMIR A MARCAÇÃO EM CIMA DO MENU AO PASSAR O CURSOR EM CIMA*/
+} 
 
-#esquerda > #agora:hover{
+#direita > .botoes_2:hover{
     background-color: rgba(49, 47, 47, 0.678);
     color: var(--cor2);
     border-radius: 30px;
-    padding-left: 9px;
+    /* padding-left: 9px; */
+    cursor: pointer;
 }
-
-/* nav > div#agora > a{
-    gap: 5px;
-    color: var(--cor2);
-    padding: 10px;
-    border-radius: 30px; /*BORDINHA DE 30 PIXELS NO MENU*/
-    /*text-decoration: none;
-    transition-duration: 0.5s; /* VAI DEMORAR MEIO SEGUNDO PARA SUMIR A MARCAÇÃO EM CIMA DO MENU AO PASSAR O CURSOR EM CIMA*/
-/*} */
-
-/* nav > div#agora > img{
-   padding-top: 2px;
-} */
 
 menu > nav#direita {
     margin-left: auto; /*EMPURRA ESTE NAV PARA A DIREITA*/
@@ -173,6 +162,5 @@ menu > nav#direita > div > img{
 #esquerda img {
     margin-right: 5px;
 }
-
 
 
