Adicionei o botão laranja

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -40,12 +40,28 @@ header{
     color: var(--cor2);
 } 
 
-header > h2{
+#texto_2 > h2{
     padding-bottom: 4px;
 }
 
-header > p{
+#texto_2 > p{
     font-size: 1.2em;
+}
+
+#texto{
+    display: flex;
+    justify-content: space-between;
+}
+
+#texto > p{
+    background-image: linear-gradient(to right, red,orange);
+    padding-top: 15px;
+    height: 36px;
+    width: 168px;
+    border-radius: 8px;
+    font-weight: bold;
+    font-size: 1.3em;
+    text-align: center;
 }
 
 menu > h1#topo{
